[feat] : 어제 못 한 일은 백로그 가장 위에 쌓이도록 변경하고, 푸쉬알림의 형태를 수정한다 (#49)
* #40 [style] : 미사용 메서드를 제거 & 주석 처리하고 줄바꿈을 추가한다

* #40 [feat] : 어제 못 한 일은 백로그 가장 위에 쌓이도록 변경하고, 푸쉬알림의 형태를 수정한다